--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ form {
   opacity: 0.9;
   border: 5px #ddd solid;
   border-radius: 5px;
-  font-family: "Helvetica Neue", Arial;
+  font-family: "Gill Sans", sans-serif;
 }
 
 #mobile-intro-popup p {
@@ -238,7 +238,7 @@ div.dataTables_scrollHead {
 }
 
 .dataTable * {
-  font-family: "Helvetica Neue", Arial;
+  font-family: "Gill Sans", sans-serif;
   border: 0 !important;
 }
 
